Add support for token burn
